[package]
name = "furtive"
version = "0.1.0"
edition = "2021"
description = "A command-line tool for furtive services on HexPawb"
repository = "https://github.com/nic-hartley/hexpawb"
license = "BSD-3-Clause"
keywords = [ "tor", "anonymization", "onion-routing", "privacy", "hexpawb" ]
categories = [ "cryptography", "network-programming" ]

[dependencies]
