[package]
name = "hexpawb-raw"
version = "0.0.1"
edition = "2021"
description = "A low-level library implementing the core functionality of the HexPawb spec"
repository = "https://github.com/nic-hartley/hexpawb"
license = "BSD-3-Clause"
keywords = [ "tor", "anonymization", "onion-routing", "privacy", "hexpawb" ]
categories = [ "cryptography", "network-programming" ]

[dependencies]
