[package]
name = "hexpawb-raw"
version = "99.99.99"
edition = "2021"
description = "Yanked crate, do not use!"
repository = "https://github.com/nic-hartley/hexpawb"
license = "BSD-3-Clause"
keywords = [ "tor", "anonymization", "onion-routing", "privacy", "hexpawb" ]
categories = [ "cryptography", "network-programming" ]

[dependencies]
