[package]
name = "hexpawb"
version = "0.0.1"
edition = "2021"
description = "A library to easily connect to the HexPawb network"
repository = "https://github.com/nic-hartley/hexpawb"
license = "BSD-3-Clause"
keywords = [ "tor", "anonymization", "onion-routing", "privacy", "hexpawb" ]
categories = [ "cryptography", "network-programming" ]

[dependencies]
